--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html {
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #FF9500;
+  background-color: rgb(255, 255, 255);
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
@@ -38,4 +38,5 @@ h1 {
 img {
   display: block;
   margin: 0 auto;
+  width: 200px;
 }
