--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  *width: 600px; 
+  *width: 600px !important; 
   margin: 0 auto;
   background-color: rgb(255, 255, 255);
   padding: 0 20px 20px 20px;
